# mcmc-from-scratch

./: README.md  pyproject.toml  reproduce.sh  requirements.txt
.github/workflows/: ci.yml
experiments/: bnn.py  common.py  eight_schools.py  external_benchmark.py  funnel.py  gibbs_scan.py  mass_matrix.py  nuts_benchmark.py  optimal_scaling.py  rank_rhat.py  tempering.py  thinning.py  validate_exact.py  vectorized_scaling.py
mcmc/: __init__.py  base.py  bnn.py  diagnostics.py  gibbs.py  hmc.py  mala.py  metropolis.py  models.py  nuts.py  targets.py  tempering.py
tests/: test_bnn.py  test_diagnostics.py  test_gibbs.py  test_hmc.py  test_mala.py  test_metropolis.py  test_models.py  test_nuts.py  test_targets.py  test_tempering.py  test_vectorized_scaling.py
theory/: derivations.md
