[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcmc-from-scratch"
version = "0.1.0"
description = "Metropolis-Hastings, Gibbs, and Hamiltonian Monte Carlo implemented from scratch in NumPy, validated against exact posteriors"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
include = ["mcmc*"]
