[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcmc-from-scratch"
version = "0.1.0"
description = "Metropolis-Hastings, Gibbs, and Hamiltonian Monte Carlo implemented from scratch in NumPy, validated against exact posteriors"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.7", "mypy>=1.8"]
# external-benchmark only: emcee is the reference sampler in
# experiments/external_benchmark.py, never imported by the package or the tests.
bench = ["emcee>=3.1"]

[tool.setuptools.packages.find]
include = ["mcmc*"]

[tool.pytest.ini_options]
# Run the unit tests AND the docstring examples. --doctest-modules is scoped
# to the (numpy-only) mcmc package and tests via testpaths, so the doctests
# never try to import experiments-only deps like matplotlib -- keeping CI's
# numpy+pytest job green.
addopts = "--doctest-modules"
testpaths = ["mcmc", "tests"]
# numerical sloppiness (overflow, invalid ops) fails tests instead of hiding
filterwarnings = ["error::RuntimeWarning"]

[tool.mypy]
# Type-check the public package (numpy-only). The experiments and tests carry
# no annotation contract, so they are out of scope. numpy ships its own stubs;
# other third-party imports (matplotlib in plotting helpers) are not checked here.
files = ["mcmc"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
